--- a/package.json
+++ b/package.json
@@ -3,8 +3,22 @@
   "version": "1.0.0",
   "description": "Demo of UI tests project for the VISEO TECH AN HOUR (VTAH) arround the QA job",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "cypress": "^13.6.6",
+    "@badeball/cypress-cucumber-preprocessor": "^20.0.1",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "esbuild": "^0.20.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "stepDefinitions": "cypress/e2e/step_definitions/*.{js,ts}",
+    "html": {
+      "enabled": true,
+      "output": "cypress/reports/html/cucumber-report.html"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
